# bus-analytics

./: .gitignore  README.md  main.py  pyproject.toml  tokyo_bus_analytics.ipynb
.github/workflows/: deploy.yml
data/: BusroutePattern.json
docs/: bus-data-analysis.md
web/: package.json
web/public/: index.html
web/src/: App.css  App.tsx
web/src/components/: MapView.tsx  RouteDetailView.tsx  RouteList.tsx  RouteNavigator.tsx  SidebarTabs.tsx  StatsPanel.tsx
web/src/hooks/: useNavigationStack.ts
web/src/types/: BusData.ts
web/src/utils/: dataProcessor.ts  urlState.ts
