[project]
name = "bus-analytics"
version = "0.1.0"
description = "Tokyo bus analytics and visualization tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "geopy>=2.4.1",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "seaborn>=0.13.2",
]
